Error Mitigation/MagiCoder/Data/java_beans/java_beansOutputResult.txt
Sample: Beans_1
----------------------------------------------------------------
stdout:
Is design time: false

================================================================

Sample: Beans_2
----------------------------------------------------------------
================================================================

Sample: FeatureDescriptor_1
----------------------------------------------------------------
stderr:
Exception in thread "main" java.beans.IntrospectionException: Method not found: isName
	at java.desktop/java.beans.PropertyDescriptor.<init>(PropertyDescriptor.java:110)
	at java.desktop/java.beans.PropertyDescriptor.<init>(PropertyDescriptor.java:74)
	at FeatureDescriptor_1.main(FeatureDescriptor_1.java:8)

================================================================

Sample: FeatureDescriptor_5
----------------------------------------------------------------
output:
./Data/java_beans/javaFiles/FeatureDescriptor_5.java:5: error: incompatible types: String cannot be converted to FeatureDescriptor
        FeatureDescriptor fd = new FeatureDescriptor("name", "type");
                                                     ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error


================================================================

Sample: IndexedPropertyChangeEvent_1
----------------------------------------------------------------
output:
./Data/java_beans/javaFiles/IndexedPropertyChangeEvent_1.java:7: error: incompatible types: String cannot be converted to int
            new Object(), "propertyName", 0, "oldValue", "newValue");
                                                         ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error


================================================================

Sample: Introspector_1
----------------------------------------------------------------
stdout:
java.beans.GenericBeanInfo@70a9f84e

================================================================

Sample: PropertyChangeEvent_2
----------------------------------------------------------------
output:
./Data/java_beans/javaFiles/PropertyChangeEvent_2.java:17: error: non-static variable this cannot be referenced from a static context
        PropertyChangeEvent event = new PropertyChangeEvent(this, "propertyName", "oldValue", "newValue");
                                                            ^
1 error


================================================================

Sample: PropertyChangeEvent_3
----------------------------------------------------------------
output:
./Data/java_beans/javaFiles/PropertyChangeEvent_3.java:17: error: non-static variable this cannot be referenced from a static context
        PropertyChangeEvent event = new PropertyChangeEvent(this, "propertyName", "oldValue", "newValue");
                                                            ^
1 error


================================================================

Sample: PropertyChangeEvent_4
----------------------------------------------------------------
output:
./Data/java_beans/javaFiles/PropertyChangeEvent_4.java:17: error: non-static variable this cannot be referenced from a static context
        PropertyChangeEvent event = new PropertyChangeEvent(this, "propertyName", "oldValue", "newValue");
                                                            ^
1 error


================================================================

Sample: PropertyChangeSupport_1
----------------------------------------------------------------
stdout:
Property changed: name newValue

================================================================

Sample: PropertyChangeSupport_2
----------------------------------------------------------------
================================================================

Sample: PropertyChangeSupport_3
----------------------------------------------------------------
stdout:
Property changed: myProperty old value: null new value: newValue

================================================================

Sample: PropertyChangeSupport_4
----------------------------------------------------------------
stdout:
Property changed: myProperty, old value: 10, new value: 20

================================================================

Sample: PropertyChangeSupport_5
----------------------------------------------------------------
stdout:
Property changed: myProperty, old value: true, new value: false

================================================================

Sample: PropertyEditorManager_4
----------------------------------------------------------------
stdout:
com.sun.beans.editors.StringEditor@1990a65e

================================================================

Sample: PropertyEditorSupport_1
----------------------------------------------------------------
stdout:
Hello

================================================================

Sample: PropertyEditorSupport_2
----------------------------------------------------------------
stdout:
Hello

================================================================

Sample: PropertyEditorSupport_3
----------------------------------------------------------------
stdout:
123

================================================================

Sample: PropertyEditorSupport_4
----------------------------------------------------------------
stdout:
123

================================================================

Sample: PropertyEditorSupport_5
----------------------------------------------------------------
stdout:
Hello

================================================================

Sample: SimpleBeanInfo_3
----------------------------------------------------------------
output:
./Data/java_beans/javaFiles/SimpleBeanInfo_3.java:9: error: cannot find symbol
            EventSetDescriptor[] eventSetDescriptors = beanInfo.getEventSetDescriptors();
            ^
  symbol:   class EventSetDescriptor
  location: class SimpleBeanInfo_3
./Data/java_beans/javaFiles/SimpleBeanInfo_3.java:11: error: cannot find symbol
            for (EventSetDescriptor eventSetDescriptor : eventSetDescriptors) {
                 ^
  symbol:   class EventSetDescriptor
  location: class SimpleBeanInfo_3
2 errors


================================================================

Sample: SimpleBeanInfo_5
----------------------------------------------------------------
stdout:
null

================================================================

Sample: VetoableChangeSupport_3
----------------------------------------------------------------
stderr:
java.beans.PropertyVetoException: Value cannot be 'Hello'
	at VetoableChangeSupport_3$1.vetoableChange(VetoableChangeSupport_3.java:12)
	at java.desktop/java.beans.VetoableChangeSupport.fireVetoableChange(VetoableChangeSupport.java:383)
	at java.desktop/java.beans.VetoableChangeSupport.fireVetoableChange(VetoableChangeSupport.java:276)
	at VetoableChangeSupport_3.main(VetoableChangeSupport_3.java:18)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.base/java.lang.reflect.Method.invoke(Method.java:569)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.execute(Main.java:419)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.run(Main.java:192)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.main(Main.java:132)

================================================================

Sample: XMLDecoder_1
----------------------------------------------------------------
stderr:
java.io.FileNotFoundException: file.xml (No such file or directory)
	at java.base/java.io.FileInputStream.open0(Native Method)
	at java.base/java.io.FileInputStream.open(FileInputStream.java:216)
	at java.base/java.io.FileInputStream.<init>(FileInputStream.java:157)
	at java.base/java.io.FileInputStream.<init>(FileInputStream.java:111)
	at XMLDecoder_1.main(XMLDecoder_1.java:8)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.base/java.lang.reflect.Method.invoke(Method.java:569)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.execute(Main.java:419)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.run(Main.java:192)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.main(Main.java:132)

================================================================

Sample: XMLEncoder_1
----------------------------------------------------------------
stderr:
./Data/java_beans/javaFiles/XMLEncoder_1.java:14: warning: unreachable catch clause
        } catch (IOException e) {
          ^
  thrown type FileNotFoundException has already been caught
1 warning
java.lang.IllegalAccessException: class sun.reflect.misc.Trampoline cannot access a member of class MyBean with modifiers "public"
Continuing ...
java.lang.Exception: XMLEncoder: discarding statement XMLEncoder.writeObject(MyBean);
Continuing ...

================================================================

